# Automatons

./: .editorconfig  .gitignore  CHANGELOG.md  Default.sublime-commands  LICENSE  Main.sublime-menu  README.md  automatons.py  automatons.sublime-commands  automatons_install.py  pyproject.toml  rtl.sublime-build
highlights/: vivado_log.sublime-syntax
lib/: GenTemplate.py
src/: automatons.py  subl_cmd.py
src/commands/: create_struct_project.py  delete_struct_project.py  update_src.py
src/lib/: gen_template.py  manager_src.py  runner.py
src/mocks/: mock_loguru.py
