[project]
name = "Automatons"
version = "0.0.1"
description = "Automatons for Sublime Text 4"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "tqdm",
    "loguru",
    "dependency-injector",
    "argparse"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "line-profiler"
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "D203", "D212", "D417",               # pydocstyle
    "S101",                               # assert
    "PLR0913",                            # too many args
    "PLW0603",                            # global
    "TRY003",                             # verbose raise
    "TRY300",                             # statement to else block
    "FIX001", "FIX002", "TD003", "TD002", # FIXME and TODO (for prod)
    "S603",
    "PTH",                                # pathlib instead os
    "T201",                               # enable print
    "S607"                                # path to executable
]
line-length = 120
target-version = "py38"
exclude = [
    "tests/",                 # ignore tests folder
    "**/__pycache__/",        # additional excludes
    "automatons.py"           # specific import for Sublime Text
]


